update refresh token
